[project]
name = "py-template"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["marshmallow>=3.22.0"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]

[tool.uv.workspace]
members = ["src/libx"]

[tool.ruff]
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
  "E",   # Pycodestyle (PEP 8) rules
  "F",   # Pyflakes rules
  "B",   # Bugbear rules for potential issues
  "I",   # Import conventions
  "Q",   # Additional checks for quoting
  "SIM", # Simplifications (best practices and code improvements)
  "C90", # Prefer Python 3 conventions over Python 2 (if applicable)
  "TID", # Type checking rules for better type hints and annotations
  "PLC", # Best practices for language constructs
  "PIE", # More Pythonic linting rules
]
ignore = [
  "E203", # Whitespace before ':' (compatible with PEP 8)
  "E501",
]
extend-select = [
  "B9",
] # Enforce additional Bugbear rules for consistency and safety
